Add comprehensive test coverage for API endpoints
- Added tests for both format and parse endpoints
- Created test fixtures for environment variables
- Updated endpoint implementations to improve error handling
- Fixed validation for format endpoint with proper request model
- Added testing dependencies to pyproject.toml
- Enhanced README with testing instructions and coverage details

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,5 +7,9 @@ requires-python = ">=3.11"
 dependencies = [
     "fastapi[standard]>=0.115.8",
     "google-genai>=1.2.0",
+    "httpx>=0.28.1",
+    "pytest>=8.3.4",
+    "pytest-cov>=6.0.0",
+    "pytest-mock>=3.14.0",
     "vlmrun-hub>=0.1.30",
 ]
