--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "google-genai>=1.2.0",
     "httpx>=0.28.1",
     "openai>=1.65.4",
+    "openai-agents>=0.0.14",
     "pytest>=8.3.4",
     "pytest-cov>=6.0.0",
     "pytest-mock>=3.14.0",
